# tui-code

./: Cargo.toml  README.md
examples/: demo.rs
src/: app.rs  complete.rs  editor.rs  highlight.rs  main.rs  shell_panel.rs  term.rs  theme.rs  tree.rs
